--- a/css/main.css
+++ b/css/main.css
@@ -5,3 +5,59 @@ body {
     font-size: 18px;
     font-weight: 300;
 }
+
+header, section, footer {
+	padding: 1em;
+}
+
+header {
+	background-image: url(../img/background.jpg);
+	background-size: cover;
+	color: #FFFFFF;
+}
+
+header a:link,
+header a:visited {
+	color: #F4D64A;
+	text-decoration: none;
+	padding-left: 1em;
+	padding-right: 1em;
+	padding-top: 0.5em;
+	padding-bottom: 0.5em;
+}
+
+header a:hover,
+header a:focus {
+	background-color: #EE0000;
+}
+
+
+#about, #projects{
+	background-color: #F3BC4F;
+}
+
+#education, #contact {
+	background-color: #A85E07;
+}
+
+footer {
+	background-color: #3E2005;
+	color: #FFFFFF;
+}
+
+img:hover {
+	opacity:0.7;
+}
+#about img {
+	max-height: 400px;
+	float: left;
+	margin-right: 1em;
+}
+
+#education {
+	clear: both;
+}
+
+#about {
+	overflow: auto;
+}
